syntax = "proto3";

import "buf/starwars/film/v1/film.proto";
import "buf/starwars/starship/v1/starship.proto";
import "buf/knit/v1alpha1/options.proto";

package buf.starwars.relation.v1;

message GetFilmStarshipsRequest {
    repeated buf.starwars.film.v1.Film bases = 1;
}

message GetFilmStarshipsResponse {
    repeated Result values = 1;
    message Result {
        repeated buf.starwars.starship.v1.Starship starships = 1;
    }
}

service RelationService {
    rpc GetFilmStarships(GetFilmStarshipsRequest) returns (GetFilmStarshipsResponse) {
        option (buf.knit.v1alpha1.relation).name = "starships";
        option idempotency_level = NO_SIDE_EFFECTS;
    }
}
